feat: add swagger endpoint on main.ts

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-DATABASE_HOST=localhost
+DATABASE_HOST=postgres
+
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=shortener
 DATABASE_PORT=5432
+
+SWAGGER_ENABLED=true
