feat: add auth env variables on example

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,7 @@ DATABASE_PASSWORD=postgres
 DATABASE_NAME=shortener
 DATABASE_PORT=5432
 
+JWT_SECRET=shortener123
+JWT_EXPIRES_IN=3000s
+
 SWAGGER_ENABLED=true
