feat: improve code practices and prometheus metrics integration

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DATABASE_NAME=shortener
 DATABASE_PORT=5432
 
 JWT_SECRET=shortener123
-JWT_EXPIRES_IN=3000s
+JWT_EXPIRES_IN=100m
 
 SWAGGER_ENABLED=true
+PROMETHEUS_ENABLED=true
